changed marker icons, add oauth for loging (working on it)

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -36,6 +36,25 @@
                 <ion-item menu-close href="#/menu/log">
                     Logs
                 </ion-item>
+
+                <ion-item menu-close>
+                    <oauth template="oauth_button.html" text="Login"
+                         site="{{ menu.site_url}}"
+                         authorize-path="{{ menu.authorize_path}}"
+                         client-id="{{ menu.client_id}}"
+                         redirect-uri="{{ menu.redirect_uri}}"
+                         profile-uri="{{ menu.profile_uri }}"
+                         scope="write">
+                    </oauth>
+                    <script type="text/ng-template" id="oauth_button.html">
+                        <a class="item-content" href="">
+                            <span class="logged-out" ng-show="show == 'logged-out'" ng-click="login()" >{{text}}</span>
+                            <span class="logged-in"  ng-show="show == 'logged-in'"  ng-click="logout()">Logout {{profile.email}}</span>
+                            <span class="denied"     ng-show="show == 'denied'"     ng-click="login()">Access denied. Try again.</span>
+                        </a>
+                    </script>
+                </ion-item>
+
             </ion-list>
         </ion-content>
     </ion-side-menu>
