--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Vehtrack Simulator</title>
+    <!--<base href="/"></base>-->
 
     <link href="css/ionic.app.css" rel="stylesheet">
 
@@ -14,6 +15,8 @@
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="lib/angular-simple-logger/dist/index.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/oauth-ng/dist/oauth-ng.js"></script>
+    <script src="lib/ngstorage/ngStorage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -29,6 +32,7 @@
     <script src="app/utils/utils.directive.js"></script>
     <script src="app/utils/utils.filter.js"></script>
     <script src="app/utils/utils.service.js"></script>
+    <script src="app/auth/auth.js"></script>
 
   </head>
 
