workin on ng-oauth fork for ionic

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,6 @@
     <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="lib/angular-simple-logger/dist/index.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="lib/oauth-ng/dist/oauth-ng.js"></script>
     <script src="lib/ngstorage/ngStorage.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -31,6 +30,8 @@
     <script src="app/utils/utils.directive.js"></script>
     <script src="app/utils/utils.filter.js"></script>
     <script src="app/utils/utils.service.js"></script>
+    
+    <script src="app/auth/oauth.js"></script>
 
   </head>
 
