--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -23,14 +23,14 @@
             <ion-list>
 
                 <ion-item menu-close href="">
-                    <oauth template="oauth_button.html" text="Login"
-                         site="{{ menu.settings.http_host}}"
-                         authorize-path="{{ menu.settings.auth_path }}"
-                         client-id="{{ menu.settings.client_id }}"
-                         redirect-uri="{{ menu.redirect_uri }}"
-                         profile-uri="{{ menu.settings.http_host }}{{ menu.settings.profile_uri }}"
-                         scope="write">
-                    </oauth>
+                    <ion-oauth template="oauth_button.html" text="Login"
+                               site="{{ menu.settings.http_host}}"
+                               authorize-path="{{ menu.settings.auth_path }}"
+                               client-id="{{ menu.settings.client_id }}"
+                               redirect-uri="{{ menu.redirect_uri }}"
+                               profile-uri="{{ menu.settings.http_host }}{{ menu.settings.profile_uri }}"
+                               scope="write">
+                    </ion-oauth>
                     <script type="text/ng-template" id="oauth_button.html">
                         <span class="logged-out" ng-show="show == 'logged-out'" ng-click="login()" >{{text}}</span>
                         <span class="logged-in"  ng-show="show == 'logged-in'"  ng-click="logout()">Logout <i class="calm">{{profile.email}}</i></span>
