--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -22,7 +22,7 @@
         <ion-content>
             <ion-list>
 
-                <ion-item menu-close href="">
+                <ion-item menu-close href="#">
                     <ion-oauth template="oauth_button.html" text="Login"
                                site="{{ menu.settings.http_host}}"
                                authorize-path="{{ menu.settings.auth_path }}"
